2008-03-05  Richard Hult  <richard@imendio.com>

	* gconf/gconf-client.c (remove_key_from_cache_recursively_foreach):
	Fix crash, not sure why a null entry can be in the cache though so
	this is more of a workaround.

2008-02-07  Richard Hult  <richard@imendio.com>

	* backends/Makefile.am: Patch from Ross Burton to fix build with
	--as-needed.

2008-01-28  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c: Patch from Ross Burton to use right the
	match rule, fixes problems when using D-Bus 1.1.x.

2007-12-11  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c: (ensure_dbus_connection),
	(gconf_dbus_message_filter): Warn instead of exit when we get
	disconnected from the bus.

2007-11-10  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c: (gconf_handle_dbus_exception),
	(gconf_engine_all_entries), (gconf_engine_all_dirs),
	(gconf_engine_suggest_sync), (gconf_engine_dir_exists): Plug
	leaks (also do some s/bool/pointer/ in g_return_val_if_fail
	macros).

2007-06-27  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database-dbus.c: (database_message_func),
	(database_handle_suggest_sync):
	* gconf/gconf-dbus.c: (gconf_engine_suggest_sync): Implement
	suggest_sync.

2007-06-27  Richard Hult  <richard@imendio.com>

	* backends/Makefile.am: Patch from Ronald Bultje to fix
	portability.

2007-06-27  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database-dbus.c (database_handle_set_schema): Empty
	schema name means unset.

2007-05-24  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database-dbus.c: (database_handle_get_all_dirs):
	* gconf/gconf-dbus.c: (gconf_engine_all_dirs): Use an array for
	directories as well, to avoid hitting the max size for message
	headers if there are many dirs (hundreds at the same level).

2007-05-22  Richard Hult  <richard@imendio.com>

	* dbus-tests/test-getting-and-setting.sh:
	* dbus-tests/test-schema-bug.c: (main):
	* dbus-tests/test-schemas.schemas: Use different keys for the