@@ -1,3 +1,10 @@
+2008-03-31  Richard Hult  <richard@imendio.com>
+
+	* gconf/gconf-database.c (gconf_database_notify_listeners): Get
+	rid of critical warning (and crash when built with
+	--disable-debug), when unsetting a key that has no writable
+	sources.
+
 2008-03-05  Richard Hult  <richard@imendio.com>
 
 	* gconf/gconf-client.c (remove_key_from_cache_recursively_foreach):
